<resources>
    <!-- Miscellaneous -->
    <string name="app_name">MyMusicApp</string>
    <string name="copyright">App created by VicentMY</string>
    <!-- Navigation -->
    <string name="nav_songs">Song List</string>
    <string name="nav_playlists">Playlists</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="nav_player">Music player</string>
    <string name="nav_chat">Chat</string>
    <string name="menu_music_group">Music</string>
    <string name="menu_miscellaneous_group">Miscellaneous</string>
    <string name="nav_logout">Logout from chat</string>
    <string name="nav_settings">App preferences</string>
    <!-- Login and Register -->
    <string name="login_title">LOGIN</string>
    <string name="email_field">Email</string>
    <string name="passwd_field">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_create_account">CREATE AN ACCOUNT</string>
    <string name="register_title">REGISTER ACCOUNT</string>
    <string name="passwd_confirm">Password confirmation</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_back_login">BACK TO LOGIN</string>
    <string name="tv_pass_recovery">Forgot Password? Click here</string>
    <string name="bad_credentials">Bad Credentials</string>
    <string name="no_email_or_pass">Email and password are required</string>
    <!-- Dialogs -->
    <string name="dialog_app_close_message">Do you want to exit the application?</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_cancel">No</string>
    <!-- Preferences -->
    <!-- Chat -->
    <string name="chat_header">Chat</string>
    <string name="username_title">Username</string>
    <string name="chat_color_self">Background color for your messages (example: #FFF000)</string>
    <!-- Cache -->
    <string name="cache_header">Cache</string>
    <string name="cache_storage_title">Enable offline mode</string>
    <!-- Permissions -->
    <string name="perm_denied_msg">You must give Audio and Music Access permissions to use the app</string>
    <!-- Songs -->
    <string name="unknown_artist">Unknown artist</string>
    <string name="already_first_msg">There is no previous track</string>
    <string name="already_last_msg">There is no next track</string>
    <!-- Password Recovery -->
    <string name="pass_recovery_title">RESET PASSWORD</string>
    <string name="btn_send_email">SEND EMAIL</string>
    <string name="rec_mail_sent">Recovery email sent. Check your inbox</string>
    <string name="rec_mail_error">An error occurred. Try again later</string>
    <string name="rec_no_mail_error">A recovery email is required</string>
    <string name="error_no_same_pass">Password and the confirmation must be the same</string>
    <string name="no_internet_icon">No Internet Connection Icon</string>
    <string name="dialog_offline_title">Enabling Offline Mode</string>
    <string name="dialog_offline_message">By enabling offline mode, the app will store the needed data in your device and therefore will use more storage space.</string>
    <string name="dialog_ok">OK</string>
    <string name="chat_et_hint">Type a message</string>
    <string name="chat_contDesc">send message button</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="relogin_required">A re-login is required</string>
    <string name="err_add_msg">Error sending the message</string>
    <string name="chat_color_other">Background color for others\' messages (example: #FFF000)</string>
    <string name="dialog_delete_msg_title">Delete Message</string>
    <string name="dialog_delete_msg_message">Are you sure you want to delete this message? Once deleted it cannot be recovered.</string>
    <string name="msg_deletion_not_permitted">You can\'t delete other users\' messages.</string>
    <string name="err_retrieving_msg">Error retrieving the message</string>
    <string name="msg_deleted_correctly">The message was deleted correctly</string>
    <string name="err_removing_msg">Error removing message</string>
    <string name="logout_message">"Goodbye! Logged out of "</string>
    <string name="fab_add_playlist">Add playlist</string>
    <string name="tracks">tracks</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="track_info">Track info</string>
    <string name="song_thumbnail_cont_desc">Song Thumbnail</string>
    <string name="fab_add_song">Add song to playlist</string>
    <string name="dialog_create_playlist_title">Create playlist</string>
    <string name="playlist_name_field">Playlist name</string>
    <string name="playlist_created">Playlist created!</string>
    <string name="dialog_delete_playlist_title">Delete Playlist</string>
    <string name="dialog_delete_playlist_message_1">Are you sure you want to delete</string>
    <string name="dialog_delete_playlist_message_2">Once deleted it cannot be recovered.</string>
    <string name="playlist_deleted_correctly">Playlist deleted correctly</string>
    <string name="err_removing_playlist">Error deleting playlist</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_rename">Rename</string>
    <string name="playlist_renamed">Playlist renamed!</string>
    <string name="add_songs_playlist_title">Add songs to playlist</string>
    <string name="cancel_selection">Cancel selection</string>
    <string name="song_removed_from_playlist">Song removed from playlist!</string>
    <string name="playlist_thumbnail_cont_desc">Playlist Thumbnail</string>
    <string name="play_btn_cont_desc">Play button</string>
    <string name="skip_to_previous_song_btn_cont_desc">Skip to previous song button</string>
    <string name="skip_to_next_song_btn_cont_desc">Skip to next song button</string>
    <string name="back_to_playlists_button">Back to playlists button</string>
    <string name="reload_music">Reload song list</string>
    <string name="reloading_music">Reloading music!</string>
    <string name="album_title_text">Album</string>
    <string name="duration_title_text">Duration</string>
    <string name="track_num_title_text">Track number</string>
    <string name="size_title_text">Size</string>
    <string name="path_title_text">Path</string>
    <string name="sd_card_prefix">/SD Card/</string>
    <string name="internal_storage_prefix">/Internal Storage/</string>
    <string name="shuffle_btn_cont_desc">Shuffle button</string>
    <string name="favorite_btn_cont_desc">Favorite button</string>
    <string name="repeat_btn_cont_desc">Repeat button</string>
    <string name="info_btn_cont_desc">Get track info button</string>
    <string name="show_playlist_btn_cont_desc">Show current playlist button</string>
    <string name="favorites_playlist_title">Favorite Tracks</string>
    <string name="cannot_delete_fav_playlist">You cannot delete the favorites playlist</string>
    <string name="cannot_man_add_fav_songs">You can only add songs through the Player</string>
    <string name="no_songs">No songs found</string>
    <string name="dialog_rename_playlist_title">Rename playlist</string>
</resources>