<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_action_player"
            android:title="@string/nav_player" />
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_action_song"
            android:title="@string/nav_songs" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_action_playlist"
            android:title="@string/nav_playlists" />

        <item android:title="@string/menu_miscellaneous_group">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_action_settings"
                    android:title="@string/nav_settings" />
                <item
                    android:id="@+id/nav_chat"
                    android:icon="@drawable/ic_action_chat"
                    android:title="@string/nav_chat" />
            </menu>
        </item>
    </group>
</menu>