<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SongsFragment">

    <ImageView
        android:id="@+id/btn_show_playlist"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_action_show_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/show_playlist_btn_cont_desc" />

    <ImageView
        android:id="@+id/btn_get_info"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_action_get_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/info_btn_cont_desc" />

    <ImageView
        android:id="@+id/iv_song_thumbnail"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/ic_action_song"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/song_thumbnail_cont_desc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_songs_player"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/rv_song_item"
        tools:itemCount="3"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_song_thumbnail" />

    <TextView
        android:id="@+id/tv_song_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_song_title" />

    <TextView
        android:id="@+id/tv_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="00:00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="00:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/btn_shuffle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_action_shuffle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_song_artist"
        android:contentDescription="@string/shuffle_btn_cont_desc" />

    <ImageView
        android:id="@+id/btn_favorite"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_action_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_song_artist"
        android:contentDescription="@string/favorite_btn_cont_desc" />

    <ImageView
        android:id="@+id/btn_repeat"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_action_repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_song_artist"
        android:contentDescription="@string/repeat_btn_cont_desc" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_favorite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:src="@drawable/ic_action_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:focusable="true"
        android:contentDescription="@string/play_btn_cont_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_skip_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:src="@drawable/ic_action_skip_previous"
        app:layout_constraintEnd_toStartOf="@+id/btn_play"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:focusable="true"
        android:contentDescription="@string/skip_to_previous_song_btn_cont_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_skip_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:src="@drawable/ic_action_skip_next"
        app:layout_constraintStart_toEndOf="@+id/btn_play"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:focusable="true"
        android:contentDescription="@string/skip_to_next_song_btn_cont_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>