<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InPlaylistFragment">

    <ImageView
        android:id="@+id/iv_in_playlist_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_action_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_to_playlists_button" />

    <ImageView
        android:id="@+id/iv_in_playlist_thumbnail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_action_playlist"
        app:layout_constraintStart_toEndOf="@id/iv_in_playlist_back"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/playlist_thumbnail_cont_desc" />

    <TextView
        android:id="@+id/tv_in_playlist_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/nav_songs"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_in_playlist_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_in_playlist_thumbnail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_in_play_songs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coo_layout_playlists"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_playlist_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_add"
            app:fabSize="auto"
            android:contentDescription="@string/fab_add_song"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom|end"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>